# QPy

./: DQNAgent.py  DQNAgentUML.drawio  EF.py  GetData.py  LoD.py  PairTrading.py  README.md  StocksEnv.py  VaR.py  deviations.py  get_data.py  pyproject.toml  setup.py  stats.py  test.py  testing.py  testing_dqn.py
QPy/: __init__.py
QPy/finstats/: __init__.py
backtesting/: __init__.py  base_backtest.py
data/: __init__.py  data.py
finrl/: DQN.py  __init__.py  trading_rlenv.py
finstats/: __init__.py
pairs/: __init__.py  pairs.py
portfolio/: __init__.py  ef.py
src/QPy/backtesting/: __init__.py
src/QPy/finstats/: VaR.py  basic.py
src/QPy/pairs/: pairs.py
src/QPy/portfolio/: ef.py
src/data_getter/: data.py
src/pairs/: __init__.py
testing/: testing_dqn.py
tests/: backtesting_test.py
